Return more data for chart
