# storage/api-docs/api-docs.json
@@ -454,6 +454,18 @@
                             "body_fat": {
                                 "type": "number",
                                 "format": "float"
+                            },
+                            "day": {
+                                "type": "number"
+                            },
+                            "week": {
+                                "type": "number"
+                            },
+                            "month": {
+                                "type": "number"
+                            },
+                            "year": {
+                                "type": "number"
                             }
                         },
                         "type": "object"
